--- a/index.html
+++ b/index.html
@@ -5,11 +5,66 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.min.css">
+    <link rel="stylesheet" href="css/header.min.css">
+    <link rel="stylesheet" href="css/hero.min.css">
     <title>Document</title>
 
 </head>
 <body>
-   <a href="location.html">Расположение</a>
-   <a href="plans.html">Планировки</a>
+    <div class="wrapper">
+        <header>
+            <div class="conteiner">
+                <div class="header">
+                    <div class="header__logo">БК "Ясенево"</div>
+                    <nav>
+                        <ul class="nav">
+                            <li class="nav__item"><a href="/">Главная</a></li>
+                            <li class="nav__item"><a href="location.html">Расположение</a></li>
+                            <li class="nav__item"><a href="plans.html">Планировки</a></li>
+                            <li class="nav__item nav__item__button">
+                                <a href="tel:+74952214022">
+                                    <span>+7 (495) 221-40-22</span>
+                                    <img class="nav__item__image" src="assets/images/phone.png" alt="">
+                                </a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>    
+        </header>
+        <main>
+            <div class="conteiner">
+                <div class="hero">
+                    <h1 class="hero__title">Офисы класса “А” в бизнес-квартале “Ясенево”</h1>                    
+                    <div class="hero__parametrs">
+                        <div class="hero__parametrs__item">
+                            <span><strong>1 мин</strong></span>
+                            <span>пешком от метро</span>
+                        </div>
+                        <div class="hero__parametrs__item">
+                            <span><strong>от 60 м²</strong></span>
+                            <span>помещения под офисы</span>
+                        </div>
+                        <div class="hero__parametrs__item">
+                            <span><strong>2024 г.</strong></span>
+                            <span>первая очередь</span>
+                        </div>
+                    </div>
+                    <img class="hero__image" src="/assets/images/Mask group.png" alt="Бизнес квартал">
+                    <nav>
+                        <ul class="nav hero-nav">                       
+                            <li class="nav__item nav__item__button"><a href="location.html">Расположение</a></li>
+                            <li class="nav__item nav__item__button"><a href="plans.html">Планировки</a></li>
+                        </ul>
+                    </nav>                    
+                </div>
+            </div>
+        </main>
+        <footer></footer>
+    </div>
+    
+            
+   
+   
 </body>
 </html>
