--- a/plans.html
+++ b/plans.html
@@ -9,6 +9,36 @@
 
 </head>
 <body>
-   <h1>Планировки</h1>
+    <div class="wrapper">
+        <header>
+            <div class="conteiner">
+                <div class="header">
+                    <div class="header__logo">БК "Ясенево"</div>
+                    <nav>
+                        <ul class="nav">
+                            <li class="nav__item"><a href="/">Главная</a></li>
+                            <li class="nav__item"><a href="location.html">Расположение</a></li>
+                            <li class="nav__item"><a href="plans.html">Планировки</a></li>
+                            <li class="nav__item nav__item_button"><a href="tel:+74952214022">+7 (495) 221-40-22</a></li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>    
+        </header>
+        <main>
+            <div class="conteiner">
+                <div class="hero">
+                    <h1 class="hero__title hero__title_smaller">Выбирайте планировку для любого бизнеса</h1>                    
+                    <div class="hero__parametrs">
+                        <div class="hero__parametrs__item">
+                            <span><strong>от 60 м²</strong></span>
+                            <span>помещения под офисы</span>
+                        </div>                      
+                    </div>
+                    <img class="hero__image" src="/assets/images/Mask group.png" alt="Бизнес квартал">
+                </div>
+            </div>
+        </main>
+        <footer></footer>
 </body>
 </html>
