осталось подправить кнопку

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="conteiner">
                 <div class="hero">
                     <h1 class="hero__title">Офисы класса “А” в бизнес-квартале “Ясенево”</h1>                    
-                    <div class="hero__parametrs">
+                    <div class="hero__parametrs hero__parameters__large">
                         <div class="hero__parametrs__item">
                             <span><strong>1 мин</strong></span>
                             <span>пешком от метро</span>
@@ -50,7 +50,7 @@
                             <span>первая очередь</span>
                         </div>
                     </div>
-                    <img class="hero__image" src="/assets/images/Mask group.png" alt="Бизнес квартал">
+                    <img class="hero__image" src="assets/images/Mask_group_1.png" alt="Бизнес квартал">
                     <nav>
                         <ul class="nav hero-nav">                       
                             <li class="nav__item nav__item__button"><a href="location.html">Расположение</a></li>
@@ -58,6 +58,10 @@
                         </ul>
                     </nav>                    
                 </div>
+                
+            </div>
+            <div class="conteiner">
+                
             </div>
         </main>
         <footer></footer>
