--- a/index.html
+++ b/index.html
@@ -60,8 +60,28 @@
                 </div>
                 
             </div>
-            <div class="conteiner">
-                
+            <div class="conteiner">                
+                <div class="about">
+                    <div class="count">
+                        <div class="count__title">О ПРОЕКТЕ</div>
+                    </div>
+                    <h2 class="about__title">Уникальный проект в динамично развивающемся районе Москвы</h2>
+                    <span class="about__text1">Бизнес-квартал «Ясенево» расположен на пересечении ключевых маршрутов локации – в 1 мин. от действующей станции метро и автотрассы СБВ (дублёр МКАД) с удобным съездом на парковку. Здесь проходит единственный путь от жилых районов к метро, что обеспечивает высокую активность пешеходного трафика.</span>
+                    <div class="about__advantage">
+                        <img class="about__advantage__image" src="assets/images/image_1.png" alt="">
+                        <div class="about__advantage__item">Повышенный класс очистки воздуха</div>
+                        <img class="about__advantage__image" src="assets/images/image_2.png" alt="">
+                        <div class="about__advantage__item">Открывающиеся окна с дистанционным управлением</div>
+                        <img class="about__advantage__image" src="assets/images/image_3.png" alt="">
+                        <div class="about__advantage__item">Паровое увлажнение воздуха</div>
+                        <img class="about__advantage__image" src="assets/images/image_4.png" alt="">
+                        <div class="about__advantage__item">Возможна отделка офиса на выбор</div>
+                        <img class="about__advantage__image" src="assets/images/image_5.png" alt="">
+                        <div class="about__advantage__item">Офисная кухня в каждом лоте</div>
+                    </div>
+                    <p class="about__text2">Vita-офисы в бизнес-квартале – новые эффективные рабочие пространства на основе идеи витальности (жизненной силы), эстетики и функциональности. Создают благоприятное воздействие на эмоциональное состояние и работоспособность сотрудников, развитие бизнеса. Это единая цифровая среда, инфраструктура для резидентов и уникальные шеринг-помещения: комната для тимбилдинга, лекторий, кабинет врача, йога-класс и многое другое.</p>
+                </div>
+
             </div>
         </main>
         <footer></footer>
