добавлена часть информации и галерея

--- a/index.html
+++ b/index.html
@@ -80,8 +80,39 @@
                         <div class="about__advantage__item">Офисная кухня в каждом лоте</div>
                     </div>
                     <p class="about__text2">Vita-офисы в бизнес-квартале – новые эффективные рабочие пространства на основе идеи витальности (жизненной силы), эстетики и функциональности. Создают благоприятное воздействие на эмоциональное состояние и работоспособность сотрудников, развитие бизнеса. Это единая цифровая среда, инфраструктура для резидентов и уникальные шеринг-помещения: комната для тимбилдинга, лекторий, кабинет врача, йога-класс и многое другое.</p>
+                    <div class="count__button"><a href="/">Узнать больше</a></div>
+                    <img class="count__image" src="assets/images/gallery_6.png" alt="">
+                </div>               
+            </div>
+            <div class="conteiner">
+                <div class="inf">
+                    
+                    <div class="inf__title">ИНФРАСТРУКТУРА</div>
+                    <h2 class="pdf__title_intem">Район с готовой инфраструктурой</h2>
+                    <div class="inf__galery">
+                        <span>Торгово-офисный центр с крытым переходом из метро</span>
+                        <img class="inf__galery__image1" src="assets/images/gallery_1.png" alt="">
+                        <span>Уникальные пространства для резидентов бизнес центра</span>
+                        <img class="inf__galery__image2" src="assets/images/gallery_4.png" alt="">
+                        <span>Подземная и наземная парковка с электро-зарядками</span>
+                        <img class="inf__galery__image3" src="assets/images/gallery_5.png" alt="">
+                        <span>«Уличная гостиная» с удобной мебелью</span>
+                        <img class="inf__galery__image4" src="assets/images/gallery_2.png" alt="">
+                        <span>Благоустройство более 7Га с выходом к набережной</span>
+                        <img class="inf__galery__image5" src="assets/images/gallery_3.png" alt="">
+                        <span>Магазины, панорамный ресторан, шоу-румы, эвенты</span>
+                        <img class="inf__galery__image6" src="assets/images/gallery_6.png" alt="">
+                        
+                    </div>
                 </div>
+            </div>
+            <div class="conteiner">
+                <div class="pdf">
+                    <div class="pdf__title">ПОДРОБНО</div>
+                    <h2 class="pdf__title1">Вся информация о проекте — в презентации</h2>
+                    <span class="pdf__text1">25 слайдов подробной нформации Инфраструктура, благоустройство, расположение  Инжененрия, концепция и тд.</span>
 
+                </div>
             </div>
         </main>
         <footer></footer>
