настроен шрифт в контейнере инфо и пдф

--- a/index.html
+++ b/index.html
@@ -86,9 +86,8 @@
             </div>
             <div class="conteiner">
                 <div class="inf">
-                    
                     <div class="inf__title">ИНФРАСТРУКТУРА</div>
-                    <h2 class="pdf__title_intem">Район с готовой инфраструктурой</h2>
+                    <h2 class="pdf__title__intem">Район с готовой инфраструктурой</h2>
                     <div class="inf__galery">
                         <span>Торгово-офисный центр с крытым переходом из метро</span>
                         <img class="inf__galery__image1" src="assets/images/gallery_1.png" alt="">
@@ -109,8 +108,9 @@
             <div class="conteiner">
                 <div class="pdf">
                     <div class="pdf__title">ПОДРОБНО</div>
-                    <h2 class="pdf__title1">Вся информация о проекте — в презентации</h2>
-                    <span class="pdf__text1">25 слайдов подробной нформации Инфраструктура, благоустройство, расположение  Инжененрия, концепция и тд.</span>
+                    <h2 class="pdf__title__intem">Вся информация о проекте — в презентации</h2>
+                    <span class="pdf__text">25 слайдов подробной нформации Инфраструктура, благоустройство, расположение  Инжененрия, концепция и тд.</span>
+                    <img src="assets/images/icon_pdf.png" alt=""> <a href="/"></a>
 
                 </div>
             </div>
