--- a/index.html
+++ b/index.html
@@ -109,9 +109,13 @@
                 <div class="pdf">
                     <div class="pdf__title">ПОДРОБНО</div>
                     <h2 class="pdf__title__intem">Вся информация о проекте — в презентации</h2>
-                    <span class="pdf__text">25 слайдов подробной нформации Инфраструктура, благоустройство, расположение  Инжененрия, концепция и тд. 
-                        <img class="pdf__text__image" src="assets/images/icon_pdf.png" alt=""> <a href="/"></a>
-                    </span>
+                    <ul class="pdf__text">
+                        <li>25 слайдов подробной нформации </li>
+                        <li>Инфраструктура, благоустройство, расположение</li>
+                        <li>Инжененрия, концепция и тд.</li> 
+                        
+                    </ul>
+                    <img class="pdf__text__image" src="assets/images/icon_pdf.png" alt=""> <a href="/"></a>
                     <div class="pdf__button"><a href="/">Скачать презентацию</a></div>
                 </div>
             </div>
